<resources>
    <string name="app_name">GuessTheNumber</string>
    <string name="start">Начало диапазона</string>
    <string name="end">Конец диапазона</string>
    <string name="startButton">Начать</string>
    <string name="biggerButton">Больше</string>
    <string name="smallerButton">Меньше</string>
    <string name="startText">Начало:</string>
    <string name="endText">Конец:</string>
    <string name="counterText">Количество шагов:</string>
    <string name="equalsButton">Равно</string>
</resources>