<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheNumber">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="30dp"
        android:id="@+id/layout1">

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startText"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end"
            android:text="@string/endText"
            android:layout_below="@id/start"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startValue"
            android:layout_toEndOf="@id/start"
            android:layout_alignBaseline="@id/start"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endValue"
            android:layout_toEndOf="@id/end"
            android:layout_alignBaseline="@id/end"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/chosenValue"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:textFontWeight="@integer/material_motion_duration_medium_2"
            android:textSize="50sp" />
    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biggerButton"
        android:id="@+id/biggerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/equalsButton"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:layout_margin="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalsButton"
        android:id="@+id/equalsButton"
        app:layout_constraintStart_toEndOf="@id/biggerButton"
        app:layout_constraintEnd_toStartOf="@id/smallerButton"
        app:layout_constraintTop_toTopOf="@id/biggerButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallerButton"
        android:id="@+id/smallerButton"
        app:layout_constraintStart_toEndOf="@id/equalsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:layout_margin="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/counter"
        app:layout_constraintBaseline_toBaselineOf="@id/counter"        android:layout_margin="30dp"
        android:id="@+id/counterText"
        android:text="@string/counterText"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/counterText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smallerButton"
        android:layout_margin="30dp"
        android:textSize="30sp"
        android:textFontWeight="@integer/material_motion_duration_medium_2"
        android:id="@+id/counter"
        />
</androidx.constraintlayout.widget.ConstraintLayout>