<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toStartOf="@id/layout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/startText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/a"
            android:layout_alignEnd="@id/a"
            android:layout_alignParentTop="true"
            android:text="@string/start"
            android:textAlignment="center" />

        <NumberPicker
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startText"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout2"
        >

        <TextView
            android:id="@+id/endText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textAlignment="center"
            android:layout_alignStart="@id/b"
            android:layout_alignEnd="@id/b"/>

        <NumberPicker
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:width="100dp"
            android:layout_below="@id/endText"/>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>